runtime/tests/cases/variables/errors/extern_shadows_temp.bobbin
temp gold = 50
extern gold

You have {gold} gold.
